[package]
name = "twinkle"
version = "0.1.3"
authors = ["Akihito KIRISAKI <kirisaki@klaraworks.net>"]
license = "BSD-3-Clause"
edition = "2018"

description = "Client library for twinkle"
repository = "https://github.com/kirisaki/twinkle-rust"
keyeords = ["db", "database"]
categories = ["database", "database-implementations"]
readme = "README.md"

[dependencies]
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }